# Argos

./: .gitignore  .travis.yml  CMakeLists.txt  CMakeLists.txt.user.07b53f8  data.atlas  data.json  items.atlas  items.json  main.cpp  main.cpp.autosave  player.atlas  tiles.atlas  tiles.json
Box2D/: CMakeLists.txt
Box2D/Dynamics/Contacts/: b2Contact.cpp
art/: .directory  A platformer in the forest _ OpenGameArt.org.html  Dirt Platformer Tiles _ OpenGameArt.org.html  Haunted Forest Trees _ OpenGameArt.org.html  Misc. Dark Fantasy Scenery Sprites _ OpenGameArt.org.html  demon.xcf  trees _ OpenGameArt.org.html
scripts/: travis.sh
src/: Character.cpp  Character.h  Constants.h  Controlable.cpp  Controlable.h  GameObject.cpp  GameObject.h  Item.cpp  Item.h  Logger.h  Projectile.h  Vec2.cpp  Vec2.h  stb_perlin.cpp  stb_perlin.h
src/controls/: PlayerControls.cpp  PlayerControls.h
src/enemies/: Snake.cpp  Snake.h
src/gamedata/: GameData.cpp  GameData.h  ItemData.h  TextureAtlas.h  TileData.cpp  TileData.h
src/level/: AmbientTile.cpp  AmbientTile.h  ContactChecker.cpp  ContactChecker.h  Level.h  LevelGen.cpp  LevelGen.h  Tile.cpp  Tile.h  TileMap.h
src/objects/: Collectable.cpp  Collectable.h  Stone.h
src/players/: Player.cpp  Player.h
unittests/: CMakeLists.txt  DummyTest.cpp
